# chrisplusplus

./: .gitignore  CMakeLists.txt  CMakePresets.json  ProjectRequirements.txt  README.md  agenda.txt  fast_api_endpoints.json  mainwindow.cpp  mainwindow.h  resources.qrc  ruans_requirements.txt  testSSLforNow.cpp
.qt/: ChrisPlusPlus-plugins.cmake  QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_ChrisPlusPlus_0055ae5e62.cmake
controllers/: AccessController.cpp  AccessController.h  AccountController.cpp  AccountController.h  FileDashController.cpp  FileDashController.h  LoginController.cpp  LoginController.h  SharedDashController.cpp  SharedDashController.h  SideNavController.cpp  SideNavController.h  SignUpController.cpp  SignUpController.h  TOTPController.cpp  TOTPController.h
crypto/: AuthHash.cpp  AuthHash.h  CMakeLists.txt  CryptoTypes.h  Hmac.cpp  Hmac.h  IKeyDerivation.h  KeyDerivation.cpp  KeyDerivation.h  MEKGenerator.cpp  MEKGenerator.h  WrappedMEK.cpp  WrappedMEK.h
database/: AuthClient.cpp  AuthClient.h  Database.cpp  Database.h  UserDatabase.cpp  UserDatabase.h
database/auth/: AuthDatabase.cpp  AuthDatabase.h  AuthDatabaseInterface.h  UserDatabase.cpp  UserDatabase.h
examples/: file_management_example.cpp
fileIO/: CMakeLists.txt  fileTransfer.cpp  fileTransfer.h
httpC/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
models/: AccessModel.cpp  AccessModel.h  FileModel.cpp  FileModel.h  LoginModel.cpp  LoginModel.h  SharedFileModel.cpp  SharedFileModel.h  SideNavTabs.h  SignUpModel.cpp  SignUpModel.h  TOTPModel.cpp  TOTPModel.h
network/: AuthClient.cpp  AuthClient.h  Client.cpp  Client.h
services/: ApiService.cpp  ApiService.h  RootService.cpp  RootService.h
services/ack/: AclService.cpp  AclService.h
services/auth/: AuthService.cpp  AuthService.h  IAuthService.cpp  IAuthService.h  ValidationService.cpp  ValidationService.h
services/auth/otp/: TOTP.cpp  TOTP.h  TOTPEnrollment.cpp  TOTPEnrollment.h
services/files/: CMakeLists.txt  FileManager.cpp  FileManager.h  FileService.cpp  FileService.h  IFileService.h  README.md  SecureFileHandler.cpp  SecureFileHandler.h
services/files/client/: AuditServiceClient.cpp  AuditServiceClient.h  DataConverter.cpp  DataConverter.h  FileOperationsClient.cpp  FileOperationsClient.h  FileServiceClient.cpp  FileServiceClient.h  SharingServiceClient.cpp  SharingServiceClient.h
services/files/compression/: CompressionEngine.cpp  CompressionEngine.h
services/files/config/: ServiceConfig.h
services/files/encryption/: FileEncryptionEngine.cpp  FileEncryptionEngine.h
services/files/examples/: FileManagementExample.cpp
services/files/exceptions/: Exceptions.cpp  Exceptions.h
services/files/interfaces/: Interfaces.h
services/files/models/: DataModels.h
services/files/network/: AuthServiceClient.cpp  AuthServiceClient.h  DataConverter.cpp  FileOperationsClient.cpp  FileOperationsClient.h  FileServiceClient.cpp  FileServiceClient.h  HTTPClient.cpp  HTTPClient.h
services/files/serialization/: SerializationEngine.cpp  SerializationEngine.h
sockets/: CMakeLists.txt  SSLConnection.cpp  SSLConnection.h  SSLContext.cpp  SSLContext.h
styles/: login.css  styles.css
tests/: AuthServiceTest.cpp  CMakeLists.txt  run_tests.sh  running_tests.txt  testAuthHash.cpp  testComplete.cpp  testFileUploadSimple.cpp  testHMAC.cpp  testHTTP.cpp  testKeyDerivation.cpp  testLogin.cpp  testMEKGenerator.cpp  testMVCConnections.cpp  testNetworkSystemComplete.cpp  testSSLforNow.cpp  testTOTPFlow.cpp  testTOTPSimple.cpp  testWrappedMEK.cpp  test_engines.cpp
tests/mvc-tests/: testAccessConnection.cpp  testFileConnection.cpp  testLoginConnection.cpp  testSignUpConnection.cpp
tofu/: CMakeLists.txt  DeviceCertificate.cpp  DeviceCertificate.h  QRVerification.cpp  QRVerification.h  TOFUPromptManager.cpp  TOFUPromptManager.h  TrustStoreEntry.cpp  TrustStoreEntry.h
utils/: Config.cpp  Config.h  StringUtils.h
views/: AccessDialog.cpp  AccessDialog.h  AccountSection.cpp  AccountSection.h  FilesDashView.cpp  FilesDashView.h  HeaderWidget.cpp  HeaderWidget.h  LoginView.cpp  LoginView.h  SharedDashView.cpp  SharedDashView.h  SideNavWidget.cpp  SideNavWidget.h  SignUpView.cpp  SignUpView.h  TOTPCodeDialog.cpp  TOTPCodeDialog.h  TOTPSetupView.cpp  TOTPSetupView.h
